simple ioc v1.1